--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ web/sites/default/files/php
 web/sites/default/files/js
 db_backups/*.*
 /web/sites/default/settings.local.php
+web/sites/default/settings.local.php.bak
+
 
 
 
