Changed site name

--- a/web/sites/default/files/config_cqoy9blV3SUmvX0o2eQ9g8H51rZKT2G-fYuUYw_jNvRU30s7ejR9lrrlemgplbM2Hev-PI9c3A/sync/system.site.yml
+++ b/web/sites/default/files/config_cqoy9blV3SUmvX0o2eQ9g8H51rZKT2G-fYuUYw_jNvRU30s7ejR9lrrlemgplbM2Hev-PI9c3A/sync/system.site.yml
@@ -1,5 +1,5 @@
 uuid: 82768aca-5413-4c91-8bd8-99c7a8b69b97
-name: 'Front Line Assembly'
+name: 'Front 242'
 mail: fla@localhost.com
 slogan: 'Jesus had days like this'
 page:
